Knife tool doesn't maintain snap to center when holding ctrl button. #39617

Closed
opened 2014-04-06 14:21:24 +02:00 by Adrian Ferguson · 9 comments

System Information
Windows 7 x64 Home Premium, ATI Mobility Radeon HD 5470

Blender Version
Broken: 2.70
Worked: 2.69

Short description of error
In 2.69 when holding the ctrl key if you click on two edges all the ones in between would snap to center. In 2.7 only edges that are explicitly selected will snap to center meaning that you have to click each edge rather than being able to select a range of edges.

Blender 2.69
2.69.PNG

Blender 2.70
2.7.PNG
Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** Windows 7 x64 Home Premium, ATI Mobility Radeon HD 5470 **Blender Version** Broken: 2.70 Worked: 2.69 **Short description of error** In 2.69 when holding the ctrl key if you click on two edges all the ones in between would snap to center. In 2.7 only edges that are explicitly selected will snap to center meaning that you have to click each edge rather than being able to select a range of edges. Blender 2.69 ![2.69.PNG](https://archive.blender.org/developer/F84114/2.69.PNG) Blender 2.70 ![2.7.PNG](https://archive.blender.org/developer/F84116/2.7.PNG) **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @AdrianFerguson

Added subscriber: @AdrianFerguson
Howard Trickey was assigned by Bastien Montagne 2014-04-06 20:03:09 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Howard, you may know whether this is intended change or actual regression? Or maybe Campbell?

Howard, you may know whether this is intended change or actual regression? Or maybe Campbell?
Member

I can see both behaviors as being useful, but might as well make it do what it used to do. I will work on this when I get some time.

I can see both behaviors as being useful, but might as well make it do what it used to do. I will work on this when I get some time.

Behavior is still unchanged in 2.70a

Behavior is still unchanged in 2.70a
Member

Revision f2f3ef8692 reverts to the 2.65 behavior.

I had thought that maybe it was better not to snap the intermediate points, since what if that's what you wanted? How would you do it? But I guess you can kind of line your cursor up with the snapped place on the final edge, and then let go of Control. Anyway, since it appears you find the old behavior more useful and it used to do that, I changed the behavior back to snap to the intermediate points too.

Revision f2f3ef8692 reverts to the 2.65 behavior. I had thought that maybe it was better not to snap the intermediate points, since what if that's what you wanted? How would you do it? But I guess you can kind of line your cursor up with the snapped place on the final edge, and then let go of Control. Anyway, since it appears you find the old behavior more useful and it used to do that, I changed the behavior back to snap to the intermediate points too.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39617
No description provided.