Fix Knife bug T39617: midpoint snap should affect intermediate points.

This reverts to the 2.69 behavior, where the snap-to-midpoint option
affected the intermediate crossed edges as well as the endpoints.